# osuScoreTracker

./: .gitignore  LICENSE  README.md  database.sqlite  main.py  pyproject.toml  requirements.txt
src/: api.py  cli.py  database.py
src/score_tracker/: api.py  cli.py  database.py  gui.py  main.py
src/score_tracker/controllers/: api.py  maps.py  scores.py  users.py  utils.py
src/score_tracker/models/: maps.py  scores.py  seed.py  utils.py
