[project]
name = "ScoreTracker"
description = "CLI tool to track osu! scores and make spreadsheets"
readme = "README.md"
license = { text = "MIT License" }
authors = [{name = "Oskar Brzeski", email = "oskar.brzeski.github@hotmail.com"}]
version = "2024.02.10"
requires-python = ">=3.11"
dependencies = [
    "ossapi==3.4.1",
    "python-dotenv==1.0.0",
]

[build-system]
requires = ["setuptools>=59.6.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
score-tracker = "score_tracker.cli:main"