[project]
name = "ScoreTracker"
description = "CLI tool to track osu! scores and make spreadsheets"
readme = "README.md"
license = { text = "MIT License" }
authors = [{name = "Oskar Brzeski", email = "oskar.brzeski.github@hotmail.com"}]
version = "2024.06.10"
requires-python = ">=3.12"
dependencies = [
    "ossapi==4.0.0",
    "python-dotenv==1.0.1",
]

[build-system]
requires = ["setuptools>=59.6.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
score-tracker = "score_tracker.cli:main"